examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unexpected_application_reconstruct.st
language core;

extend with #type-reconstruction;

fn main(f : fn(Bool) -> auto) -> auto {
    return f(0)
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
